--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="1;url=https://thebeautyofmath.github.io/Home.html">
+<meta http-equiv="refresh" content="1;url=https://bamimarie.github.io/welcome.html">
