--- a/welcome.html
+++ b/welcome.html
@@ -6,7 +6,7 @@
     <link Pyrel="website.py">
   </head>
   <body>
-    <form action = "website.py" method = "post">
+    <form action = "\website.py" method = "post">
     First Name: <input type = "text" name = "first_name"><br />
     Last Name: <input type = "text" name = "last_name" />
     <input type = "submit" value = "Submit" />
