--- a/welcome.html
+++ b/welcome.html
@@ -2,14 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>{{{WEBSITE NAME GOES HERE}}}</title>
-    <link Pyrel="website.py">
+    <title>New-Age Builder's Guild</title>
   </head>
   <body>
-    <form action = "\website.py" method = "post">
-    First Name: <input type = "text" name = "first_name"><br />
-    Last Name: <input type = "text" name = "last_name" />
-    <input type = "submit" value = "Submit" />
-    </form>
+    <h1>Welcome Page</h1>
   </body>
 </html>
