--- a/welcome.html
+++ b/welcome.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<meta http-equiv="refresh" content="1;url=https://twitbler.github.io/welcome.html">
+<meta url=https://twitbler.github.io/welcome.html">
   <head>
     <meta charset="utf-8">
     <title>New-Age Builder's Guild</title>
