--- a/welcome.html
+++ b/welcome.html
@@ -2,9 +2,18 @@
 <meta url=https://twitbler.github.io/welcome.html">
   <head>
     <meta charset="utf-8">
-    <title>New-Age Builder's Guild</title>
+    <title>Twitbler Workspace</title>
   </head>
   <body>
-    <h1>Welcome Page</h1>
+    <h1>Welcome to the workspace.</h1>
+    <span style="display:block; height: 15px;"></span>
+    
+     <nav class="menu">
+      <ul>
+        <li><a href="welcome.html">Home</a></li>
+        <li><a href="current_post.html">Current Post</a></li>
+        <li><a href="misc.html"></a>Misc.</li>
+      </ul>
+    </nav>
   </body>
 </html>
