--- a/misc.html
+++ b/misc.html
@@ -12,9 +12,9 @@
 
        <nav class="menu">
         <ul>
-          <li><a href="welcome.html">Home</a></li>
+          <li><a href="https://github.com/twitbler/twitbler.github.io/welcome.html">Home</a></li>
           <li><a href="https://raw.githubusercontent.com/twitbler/twitbler.github.io/master/current_post">Current Post</a></li>
-          <li><a href="misc.html"></a>Misc.</li>
+          <li><a href="https://github.com/twitbler/twitbler.github.io/misc.html"></a>Misc.</li>
         </ul>
       </nav>
   </body>
