--- a/misc.html
+++ b/misc.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-<meta url=https://twitbler.github.io/misc.html">
   <head>
     <title>Misc.</title>
     <link >
@@ -12,9 +11,9 @@
 
        <nav class="menu">
         <ul>
-          <li><a href="https://github.com/twitbler/twitbler.github.io/welcome.html">Home</a></li>
-          <li><a href="https://raw.githubusercontent.com/twitbler/twitbler.github.io/master/current_post">Current Post</a></li>
-          <li><a href="https://github.com/twitbler/twitbler.github.io/misc.html"></a>Misc.</li>
+          <li><a href="/master/welcome.html">Home</a></li>
+          <li><a href="/master/current_post">Current Post</a></li>
+          <li><a href="/master/misc.html"></a>Misc.</li>
         </ul>
       </nav>
   </body>
