--- a/misc.html
+++ b/misc.html
@@ -11,9 +11,9 @@
 
        <nav class="menu">
         <ul>
-          <li><a href="/master/welcome.html">Home</a></li>
-          <li><a href="/master/current_post">Current Post</a></li>
-          <li><a href="/master/misc.html"></a>Misc.</li>
+          <li><a href="welcome.html">Home</a></li>
+          <li><a href="current_post">Current Post</a></li>
+          <li><a href="misc.html">Misc.</a></li>
         </ul>
       </nav>
   </body>
