--- a/welcome.html
+++ b/welcome.html
@@ -11,7 +11,7 @@
       <ul>
         <li><a href="https://github.com/twitbler/twitbler.github.io/welcome.html">Home</a></li>
         <li><a href="https://raw.githubusercontent.com/twitbler/twitbler.github.io/master/current_post">Current Post</a></li>
-        <li><a href="https://github.com/twitbler/twitbler.github.io/misc.html"></a>Misc.</li>
+        <li><a href="https://github.com/twitbler/twitbler.github.io/misc.html">Misc.</a></li>
       </ul>
     </nav>
   </body>
