--- a/welcome.html
+++ b/welcome.html
@@ -9,9 +9,9 @@
     
      <nav class="menu">
       <ul>
-        <li><a href="https://github.com/twitbler/twitbler.github.io/welcome.html">Home</a></li>
-        <li><a href="https://raw.githubusercontent.com/twitbler/twitbler.github.io/master/current_post">Current Post</a></li>
-        <li><a href="https://github.com/twitbler/twitbler.github.io/misc.html">Misc.</a></li>
+        <li><a href="https://welcome.html">Home</a></li>
+        <li><a href="https://current_post">Current Post</a></li>
+        <li><a href="https://misc.html">Misc.</a></li>
       </ul>
     </nav>
   </body>
