--- a/welcome.html
+++ b/welcome.html
@@ -9,9 +9,9 @@
     
      <nav class="menu">
       <ul>
-        <li><a href="https://welcome.html">Home</a></li>
-        <li><a href="https://current_post">Current Post</a></li>
-        <li><a href="https://misc.html">Misc.</a></li>
+        <li><a href="welcome.html">Home</a></li>
+        <li><a href="current_post">Current Post</a></li>
+        <li><a href="misc.html">Misc.</a></li>
       </ul>
     </nav>
   </body>
