--- a/welcome.html
+++ b/welcome.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
   <head>
-    <meta charset="utf-8">
+    <meta http-equiv="refresh" content="1;url=https://twitbler.github.io/welcome.html" charset="utf-8">
     <title>Twitbler Workspace</title>
   </head>
   <body>
