--- a/welcome.html
+++ b/welcome.html
@@ -10,7 +10,7 @@
      <nav class="menu">
       <ul>
         <li><a href="welcome.html">Home</a></li>
-        <li><a href="https://raw.githubusercontent.com/twitbler/twitbler.github.io/master/current_post">Current Post</a></li>
+        <li><a url="https://raw.githubusercontent.com/twitbler/twitbler.github.io/master/current_post">Current Post</a></li>
         <li><a href="misc.html">Misc.</a></li>
       </ul>
     </nav>
