--- a/welcome.html
+++ b/welcome.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
   <head>
     <meta url=https://twitbler.github.io/welcome.html" charset="utf-8">
-    <title>Twitbler Workspace</title>
+    <title>Twitbler Home</title>
+	<link rel="stylesheet" href="twitbler_stylesheet.css">
   </head>
   <body>
-    <h1>Welcome to the workspace.</h1>
-    <span style="display:block; height: 15px;"></span>
-    
-     <nav class="menu">
-      <ul>
-        <li><a href="welcome.html">Home</a></li>
-        <li><a href="https://raw.githubusercontent.com/twitbler/twitbler.github.io/master/current_post">Current Post</a></li>
-        <li><a href="misc.html">Misc.</a></li>
-      </ul>
-    </nav>
+    <!-- Navigation Menu -->
+	<header>
+		<nav class="menu">
+		 <ul>
+		   <li><a href="welcome.html">Home</a></li>
+		   <li><a href="https://raw.githubusercontent.com/twitbler/twitbler.github.io/master/current_post">Current Project</a></li>
+		   <li><a href="misc.html">Misc.</a></li>
+		 </ul>
+		</nav>
+	</header>
+	
+	<!-- Page Header/Welcome Message -->
+	<span><h1>Welcome to the workspace.</h1></span>
+
+	<div style="height: 15px;"></div>
+    <h2>Hello reader. My name is Brianne and I'm glad you're here.</h2>
+	<p>This site is my personal portfolio. 
+		Each project is a milestone during the learning process, a showcase of my programming knowledge.</p>
+	<p>Click around and enjoy!</p>
   </body>
 </html>
