--- a/misc.html
+++ b/misc.html
@@ -2,19 +2,23 @@
 <html>
   <head>
     <title>Misc.</title>
-    <link >
     <meta charset="utf-8">
+	<link rel="stylesheet" href="twitbler_stylesheet.css">
   </head>
   <body>
-  <h1>The junk drawer of this website.</h1>
-  <span style="display:block; height: 15px;"></span>
-
-       <nav class="menu">
-        <ul>
-          <li><a href="welcome.html">Home</a></li>
-          <li><a href="current_post">Current Post</a></li>
-          <li><a href="misc.html">Misc.</a></li>
-        </ul>
-      </nav>
+	<!-- Navigation Menu -->
+	<header>
+		<nav class="menu">
+		 <ul>
+		   <li><a href="welcome.html">Home</a></li>
+		   <li><a href="https://raw.githubusercontent.com/twitbler/twitbler.github.io/master/current_post">Current Project</a></li>
+		   <li><a href="misc.html">Misc.</a></li>
+		 </ul>
+		</nav>
+	</header>
+	
+	<!-- Page Header -->
+	<h1>The junk drawer of this website.</h1>
+	<span style="display:block; height: 15px;"></span>
   </body>
 </html>
