--- a/welcome.html
+++ b/welcome.html
@@ -2,7 +2,7 @@
   <head>
     <meta url=https://twitbler.github.io/welcome.html" charset="utf-8">
     <title>Twitbler Home</title>
-	<link rel="stylesheet" href="twitbler_stylesheet.css">
+	<link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
     <!-- Navigation Menu -->
