--- a/misc.html
+++ b/misc.html
@@ -3,7 +3,7 @@
   <head>
     <title>Misc.</title>
     <meta charset="utf-8">
-	<link rel="stylesheet" href="twitbler_stylesheet.css">
+	<link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
 	<!-- Navigation Menu -->
