--- a/misc.html
+++ b/misc.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Misc.</title>
-    <meta charset="utf-8">
+    <meta url=https://twitbler.github.io/welcome.html" charset="utf-8">
+	<meta charset="utf-8">
 	<link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
@@ -18,7 +19,7 @@
 	</header>
 	
 	<!-- Page Header -->
-	<h1>The junk drawer of this website.</h1>
-	<span style="display:block; height: 15px;"></span>
+	<h1 style="font-size:40px;">The junk drawer of this website.</h1>
+	<div id="SectionHat"></div>
   </body>
 </html>
