--- a/welcome.html
+++ b/welcome.html
@@ -1,3 +1,4 @@
+<!--  -->
 <!DOCTYPE html>
   <head>
     <meta url=https://twitbler.github.io/welcome.html" charset="utf-8">
@@ -17,12 +18,15 @@
 	</header>
 	
 	<!-- Page Header/Welcome Message -->
-	<span><h1>Welcome to the workspace.</h1></span>
-
-	<div style="height: 15px;"></div>
-    <h2>Hello reader. My name is Brianne and I'm glad you're here.</h2>
-	<p>This site is my personal portfolio. 
-		Each project is a milestone during the learning process, a showcase of my programming knowledge.</p>
-	<p>Click around and enjoy!</p>
+	<h1 style="font-size:40px;">Welcome to the workspace.<img src="hand_drawing_circle_w_compass.png" alt="Compass Construction" style="float:right;height:33%;width:33%;"></h1>
+	<div id="SectionHat"></div>
+	
+	<h2>Hello reader. My name is Brianne and I'm glad you're here.</h2>
+	
+	<span style="position:relative;bottom:13px;">
+		<p style="font-size:16px;">This site is my personal portfolio. 
+			Each project is a milestone during the learning process, a showcase of my programming knowledge.</p>
+		<p style="position:relative;bottom:13px;font-size:18px;">Click around and enjoy!</>
+	</span>
   </body>
 </html>
