--- a/misc.html
+++ b/misc.html
@@ -21,5 +21,6 @@
 	<!-- Page Header -->
 	<h1 style="font-size:40px;">The junk drawer of this website.</h1>
 	<div id="SectionHat"></div>
+	<img src="untitled.png" alt="left column">
   </body>
 </html>
