--- a/misc.html
+++ b/misc.html
@@ -19,8 +19,7 @@
 	</header>
 	
 	<!-- Page Header -->
-	<h1 style="font-size:40px;">The junk drawer of this website.</h1>
-	<div id="SectionHat"></div>
+	<!-- <h1 style="font-size:40px;">The junk drawer of this website.</h1> -->
 	<img src="untitled.png" alt="left column">
   </body>
 </html>
