--- a/misc.html
+++ b/misc.html
@@ -20,6 +20,6 @@
 	
 	<!-- Page Header -->
 	<!-- <h1 style="font-size:40px;">The junk drawer of this website.</h1> -->
-	<img src="column-entab.png" alt="columns">
+	<img style="display:inline;" src="column-entab.png" alt="columns">
   </body>
 </html>
